--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "readiness-manager",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "👨‍💼 Define when your app is ready",
   "keywords": [
     "ready",
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/fiverr/readiness-manager#readme",
   "main": "index.js",
+  "types": "./src/types.d.ts",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .js"
